Bug 950180 - Ensure the innerWidth is correct in resize events fired to content. r=Cwiiis, a=1.3+